--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,13 @@ h1 {
   padding: 40px;
   text-align: center;
   font-size: 250%;
-  border: 8px solid cornflowerblue
+  border: 8px solid cornflowerblue;
 }
 .paragraph1 {
   background-color: #9fcaff;
   font-size: 150%;
   font-family: monospace;
-  padding: 10px
+  padding: 10px;
 }
 
 .image {
