--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,8 @@
+/* Style for the body of the page */
 body {
   background-color: aliceblue;
 }
+/* Style for the title at the top of the page */
 h1 {
   background-color: navy;
   color:hsl(59, 100%, 79%);
@@ -9,17 +11,18 @@ h1 {
   font-size: 250%;
   border: 8px solid cornflowerblue;
 }
+/* Style for the heading under the title */
 .paragraph1 {
   background-color: #9fcaff;
   font-size: 150%;
   font-family: monospace;
   padding: 10px;
 }
-
+/* Style for the image */
 .image {
   border: 4px solid cornflowerblue;
 }
-
+/* Style for the link to cities page */
 .link {
   font-family: monospace;
 }
